@@ -33,7 +33,7 @@
 #include <errno.h>
 #include <signal.h>
 #include <dirent.h>
-#include <p_module.h>
+#include "p_module.h"
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <sys/poll.h>
